--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,21 +6,32 @@ on:
   pull_request:
     branches: [master, dev]
 
+env:
+  flutter_version: "3.16.0"
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      
+      - name: Setup flutter
+        uses: subosito/flutter-action@v2
         with:
+          flutter-version: ${{ env.flutter_version }}
           channel: "stable"
           cache: true
+
       - name: Fetch dependencies
         run: flutter packages get
+
       - name: Analyze project
         run: flutter analyze .
+
       - name: Run tests
         run: flutter test --coverage
+        
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
